[gd_scene load_steps=6 format=3 uid="uid://ddft2gloi2r3g"]

[ext_resource type="Script" path="res://scripts/ui/retry.gd" id="1_5s02u"]

[sub_resource type="LabelSettings" id="LabelSettings_qpayw"]
font_size = 34
font_color = Color(1, 0, 0, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_fymci"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_2hbmj"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwd6s"]
_data = {
"RESET": SubResource("Animation_fymci"),
"fade": SubResource("Animation_2hbmj")
}

[node name="retry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5s02u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.051971, 0.051971, 0.051971, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 84.0
offset_right = 235.0
offset_bottom = 131.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Retry" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to menu"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 75.0
offset_top = 19.0
offset_right = 235.0
offset_bottom = 66.0
text = "YOU DIED"
label_settings = SubResource("LabelSettings_qpayw")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="fade_in" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rwd6s")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="animation_finished" from="fade_in" to="." method="_on_fade_in_animation_finished"]
